--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- Title and Logo -->
-    <title>ChatterBlasr</title>
+    <title>ChatterBlast</title>
     <link rel="icon" href="%PUBLIC_URL%/logo.jpeg" />
   </head>
   <body>
